Fixed layout bug

--- a/frontend-framework/src/scss/slide.scss
+++ b/frontend-framework/src/scss/slide.scss
@@ -45,17 +45,23 @@
   left: 0;
 }
 
-.bal-after img,
-.bal-before img {
-  object-fit: cover;
+.bal-after picture,
+.bal-before picture {
+  object-fit: cover !important;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
   object-position: 50% 50%;
   top: 0;
   bottom: 0;
   left: 0;
   user-select: none;
+
+  img {
+    width: 100% !important;
+    height: 100% !important;
+    max-height: unset !important;
+  }
 }
 
 .bal-beforePosition {
